FIX execution of java clients